objects/ProductUserAccess__c.object
<CustomObject>
    <description>User Access of Product in Knowledge Management</description>
    <fields>
        <fullName>RoutingProductFamily__c</fullName>
        <description>Product Family for Routing Approval Workflows</description>
        <label>Approval Workflow</label>
        <required>true</required>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>ApprovalRoutingProductFamily</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>UserId__c</fullName>
        <description>Text Field to store the user id, this field makes the user field unique</description>
        <label>UserId</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>User</description>
        <inlineHelpText>User</inlineHelpText>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ProductFamilyAccess</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>KnowlegeProductFamilyAccess</label>
    <listViews>
        <fullName>All</fullName>
        <columns>User__c</columns>
        <columns>RoutingProductFamily__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PUA-{000000}</displayFormat>
        <label>ProductFamilyAccess</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>KnowledgeProductFamilyAccess</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>